Only serve resources within the expected directory
Mitigates CVE-2024-47883.
Disables fetching of remote resources and escaping the base path of the
Butterfly module. See more details at:
https://github.com/OpenRefine/simile-butterfly/security/advisories/GHSA-3p8v-w8mr-m3x8